--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,8 +1,9 @@
-mixin video(videoInfo)
+mixin video(video)
   div
-    h4=videoInfo.title
+    h4
+      a(href=`/videos/${video.id}`)=video.title
     ul 
-      li #{videoInfo.rating}/5
-      li #{videoInfo.comments} comments.
-      li Posted  #{videoInfo.createdAt}.
-      li #{videoInfo.views} views.
+      li #{video.rating}/5
+      li #{video.comments} comments.
+      li Posted  #{video.createdAt}.
+      li #{video.views} views.
