--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,11 +5,11 @@ html(lang = "ko")
     link(rel="stylesheet" href="https://unpkg.com/mvp.css")
   body
     header
+      h1=pageTitle
       nav
         ul
-          il 
-            a(href = "/login") Login
-      h1=pageTitle
+          li
+            a(href="/videos/upload") Upload Video
     main
       block content
   include partials/footer.pug
