--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -2,6 +2,6 @@ extends base
 
 block content
   h3 Hello From Upload
-  form(method="POST")
+  form(method="POST", action="/videos/upload")
     input(placeholder="Title", required, type="text")
     input(type="submit", value="Upload Video")
