--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,7 +1,10 @@
 extends base
 
 block content
-  h3 Hello From Upload
-  form(method="POST", action="/videos/upload")
-    input(placeholder="Title", required, type="text")
+  if errorMessage
+    span=errorMessage 
+  form(method="POST")
+    input(placeholder="Title", required, type="text", name="title")
+    input(placeholder="Description", required, type = "text", name="description")
+    input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags" )
     input(type="submit", value="Upload Video")
